# wos-ai-demos

./: LICENSE  README.md
Notebooks/models/: requirements.txt
Notebooks/models/Background_Blur/: background_blur_DMSHN_1536x1024.ipynb  background_blur_deeplabv3.ipynb
Notebooks/models/Background_Blur/assets/: onnx_export.patch
Notebooks/models/Depth_Estimation/: midas_v2_small.ipynb
Notebooks/models/Edge_Detection/: edge_detection_DexiNed_512x288.ipynb
Notebooks/models/Edge_Detection/assets/: onnx_export_512_288.patch  test_pair.lst
Notebooks/models/HeadPose_detection/: RankPose.ipynb  Training_pipeline.ipynb
Notebooks/models/HeadPose_detection/.ipynb_checkpoints/: RankPose_QNN_Conversion-checkpoint.ipynb
Notebooks/models/HeadPose_detection/assets/: input.txt  input_list.txt
Notebooks/models/Pose_Estimation/: pose_estimation_HRNET_512x512.ipynb
Notebooks/models/image-inpaint/: image_inpaint.ipynb
Notebooks/models/image-inpaint/assets/: onnx_export.patch
Notebooks/models/super_resolution/: superres_720p_4k.ipynb  superres_realesrgan.ipynb
Notebooks/models/super_resolution/assets/: quicksrnet_large.onnx
demos/DemoApp/: CMakeLists.txt  README.md  build.ps1
demos/DemoApp/src/: CMakeLists.txt  QnnSampleApp.cpp  QnnSampleApp.hpp  QnnTypeMacros.hpp  SampleApp.hpp  main.cpp
demos/DemoApp/src/Log/: LogUtils.cpp  LogUtils.hpp  Logger.cpp  Logger.hpp
demos/DemoApp/src/Models/: DMSHNModel.cpp  DMSHNModel.hpp  DeepFillV2Model.cpp  DeepFillV2Model.hpp  DeepLabV3Model.cpp  DeepLabV3Model.hpp  DexiNedModel.cpp  DexiNedModel.hpp  HRNetModel.cpp  HRNetModel.hpp  HeadPoseModel.cpp  HeadPoseModel.hpp  MidasV2SmallModel.cpp  MidasV2SmallModel.hpp  Model.hpp  ModelFactory.cpp  ModelFactory.hpp  ModelOpenPose.cpp  ModelOpenPose.hpp  ModelUtils.cpp  ModelUtils.hpp  QuickSRNetModel.cpp  QuickSRNetModel.hpp
demos/DemoApp/src/PAL/include/PAL/: Debug.hpp  Directory.hpp  DynamicLoading.hpp  FileOp.hpp  GetOpt.hpp  Path.hpp  StringOp.hpp
demos/DemoApp/src/PAL/src/common/: GetOpt.cpp  StringOp.cpp
demos/DemoApp/src/PAL/src/linux/: Directory.cpp  DynamicLoading.cpp  FileOp.cpp  Path.cpp
demos/DemoApp/src/PAL/src/windows/: Common.cpp  Common.hpp  Directory.cpp  DynamicLoading.cpp  FileOp.cpp  Path.cpp
demos/DemoApp/src/Utils/: BuildId.hpp  DataUtil.cpp  DataUtil.hpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  IOTensor.cpp  IOTensor.hpp  QnnSampleAppUtils.cpp  QnnSampleAppUtils.hpp
demos/DemoApp/src/WrapperUtils/: QnnWrapperUtils.cpp  QnnWrapperUtils.hpp
