#=============================================================================
#
#  Copyright (c) 2026 Qualcomm Innovation Center, Inc. All rights reserved.
#  SPDX-License-Identifier: BSD-3-Clause-Clear
#
#=============================================================================

cmake_minimum_required (VERSION 3.14)
project(DemoApp)
add_subdirectory(src)
